# orchestrator-thesis

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.controller  README.md  docker-compose.yml  pyproject.toml
agent/: config.py  controller_client.py  executor.py  healthchecker.py  local_state.py  main.py  models.py  telemetry.py
agent/app/: __init__.py  main.py
agent/app/adapters/: docker_adapter.py
agent/app/api/: __init__.py
agent/app/core/: config.py  models.py  state.py
agent/app/services/: telemetry.py  workload_manager.py
agent/tests/: test_controller_client.py  test_executor.py  test_healthchecker.py  test_local_state_isolation.py  test_proc_metrics.py
controller/: agent_client.py  api.py  config.py  ingress_manager.py  main.py  models.py  reconciler.py  scheduler.py  self_healing.py  service_manager.py  state_store.py
controller/tests/: test_agent_client_timeouts.py  test_agent_contract.py  test_deploy_store_failure_rollback.py  test_health_report_concurrency_and_missing_target.py  test_health_report_stale_and_stopped.py  test_heartbeat_timeout_grace.py  test_ingress_manager.py  test_nginx_ingress_routing.py  test_node_unreachable_reschedule.py  test_reconcile_pending.py  test_scheduler.py  test_self_healing.py  test_self_healing_restart_error.py  test_service_manager_concurrency.py  test_state_store_atomic_counter.py  test_state_store_node_address.py  test_timeout_config.py  test_timeout_node.py
docs/: release-checklist.md  runtime-smoke-test.md
infra/compose/: docker-compose.yml
infra/nginx/: default.conf  nginx.conf
sample_app/: Dockerfile  main.py
scripts/: create_clean_zip.ps1
tests/: test_local_compose_routable_endpoint_contract.py
tests/integration/: test_agent_api.py  test_controller_agent_roundtrip.py
