[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-orchestrator-thesis"
version = "0.1.0"
description = "Academic prototype: small Docker mini-orchestrator for real-time services"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "redis>=5.2.0,<6.0.0",
  "httpx>=0.28.0,<1.0.0",
  "docker>=7.1.0,<8.0.0",
  "python-json-logger>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "mypy>=1.15.0,<2.0.0",
  "ruff>=0.11.0,<1.0.0",
  "black>=25.1.0,<26.0.0",
  "types-redis>=4.6.0.20241004",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "controller*",
  "agent*",
]
exclude = [
  "docs*",
  "infra*",
  "scripts*",
  "tests*",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "ASYNC",
  "RUF",
]
ignore = [
  "E501",
  "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = [
  "docker",
  "docker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
asyncio_mode = "auto"
testpaths = [
  "controller/tests",
  "agent/tests",
  "tests/integration",
]
addopts = "-q"
